packages/react-components/src/components/TextField/TextField.css
.bcds-react-aria-TextField {
  display: inline-flex;
  flex-direction: column;
  /* Hacks for `stretch`: https://caniuse.com/mdn-css_properties_max-width_stretch */
  align-self: stretch;
  max-width: -moz-available;
  max-width: -webkit-fill-available;
}

/* Styles for the text label above the input field */
.bcds-react-aria-TextField--Label {
  font: var(--typography-regular-small-body);
  color: var(--typography-color-primary);
  padding: var(--layout-margin-hair) 0px;
}

.bcds-react-aria-TextField--Label .required {
  color: var(--typography-color-secondary);
}

/* Styles for the text description below the input field */
.bcds-react-aria-TextField--Description {
  font: var(--typography-regular-small-body);
  color: var(--typography-color-secondary);
}

/* Styles for the input field container */
.bcds-react-aria-TextField--container {
  color: var(--typography-color-primary);
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: var(--layout-margin-small);
  background: var(--surface-color-forms-default);
  box-sizing: border-box;
  border: var(--layout-border-width-small) solid
    var(--surface-color-border-default);
  border-radius: var(--layout-border-radius-medium);
  margin: var(--layout-margin-small) var(--layout-margin-none);
  padding: var(--layout-padding-small) 12px;
}

.bcds-react-aria-TextField--Input {
  border: none;
  flex-grow: 1;
}

/* Sizes */
.bcds-react-aria-TextField--container.small {
  /* using margin token is kludgy, consider adding component-specific token for input sizing */
  height: var(--layout-margin-xlarge);
}

.bcds-react-aria-TextField--container.medium {
  /* using margin token is kludgy, consider adding component-specific token for input sizing */
  height: var(--layout-margin-xxlarge);
}

/* Text input field */
.bcds-react-aria-TextField--Input {
  font: var(--typography-regular-body);
  padding: var(--layout-padding-none);
}

/* Hover and focus states */

.bcds-react-aria-TextField--container
  > .bcds-react-aria-TextField--Input[data-focused] {
  outline: none;
}

.bcds-react-aria-TextField--container:focus-within {
  border-radius: var(--layout-border-radius-large);
  border: var(--layout-border-width-small) solid
    var(--surface-color-border-active);
  outline: solid var(--layout-border-width-medium)
    var(--surface-color-border-active);
  outline-offset: var(--layout-margin-hair);
}

.bcds-react-aria-TextField--container:hover {
  border-color: var(--surface-color-border-dark);
}

/* Disabled and invalid states */

.bcds-react-aria-TextField[data-disabled]
  > .bcds-react-aria-TextField--container {
  background: var(--surface-color-forms-disabled);
  cursor: not-allowed;
}

.bcds-react-aria-TextField--Input[data-disabled] {
  cursor: not-allowed;
}

.bcds-react-aria-TextField[data-invalid]
  > .bcds-react-aria-TextField--container {
  border-radius: var(--layout-border-radius-medium);
  border: 1px solid var(--support-border-color-danger);
  background: var(--surface-color-forms-default);
}

.bcds-react-aria-TextField[data-readonly]
  > .bcds-react-aria-TextField--container {
  background: var(--surface-color-forms-disabled);
}

.bcds-react-aria-TextField[data-readonly]
  > .bcds-react-aria-TextField--container
  > .bcds-react-aria-TextField--Input {
  background: var(--surface-color-forms-disabled);
}

/* Styles for the error message slot */
.bcds-react-aria-TextField--Error {
  font: var(--typography-regular-small-body);
  color: var(--typography-color-danger);
}

